# detective-snapshot

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
detective/: proto_utils.py  snapshot.py
detective/tests/: test_nested_snapshot.py  test_snapshot.py  test_snapshot_exception_handling.py  test_snapshot_function_nesting.py
