[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detective-snapshot"
version = "0.1.0"  # Consider using dynamic versioning
description = "A package for capturing and comparing function input/output snapshots"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
authors = [
    {name = "Caffeinated AI", email = "caffeinated.ai.dev@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "jsonpath-ng",
]

dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/caffeinated-ai/detective-snapshot"

[tool.setuptools.packages.find]
where = ["."]  # Find packages in the root directory

[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["C901"]  # Function is too complex

[tool.ruff.lint.isort]
known-first-party = ["detective"]

[tool.ruff.lint.per-file-ignores]
"detective/tests/*" = ["S101"]  # Allow assert in tests
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
